--- a/css/style.css
+++ b/css/style.css
@@ -2,24 +2,49 @@
 body{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin: 20px 80px;
-    background-color: rgb(68, 106, 228);
-    color: #f5f5f5
+
+    color: rgb(55, 89, 199);
+    background-image: image("assets/shopping.jpg");
 }
 header h1{
-    display: inline-block;
-    font-size: 30px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    display: block;
+    width:100%;
+    font-size: 40px;
+    font-family: monospace;
     font-weight: 900;
-    padding: 20px 0px;
+    background-color: rgb(55, 89, 199);
+    color: white;
+    padding: 20px 500px;
+    margin-left: -120px;
+
 }
 nav ul li{
     display: inline-block;
-    padding: 10px 150px;
-   margin: 10px 0px;
-    background-color: rgb(55, 89, 199);
+    padding: 20px 150px;
+   margin: 20px 20px;
+    background-color: rgb(89, 127, 252);
+    font-size: 17px;
+}
+header nav ul li{
+    margin-left: 120px;
+}
+h2{
+    font-size: 25px;
+    font-family: monospace;
+    font-weight: 600;
+    margin-top: 30px;
+    margin-bottom: 20px;
+    margin-left: 15px;
+    color: rgb(89, 127, 252)
 }
 .copy{
+    
     width: 600px;
+    padding: 20px 20px;
+    background-color: rgb(89, 127, 252);
+    border-radius: 5mm;
+    color: #f5f5f5;
+    margin: 20px 0px;
 }
 
 .copy ol li{
